[package]
name = "drl"
version = "0.1.0"
authors = ["唐阳 <tangyang@zhihu.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "=0.5", default-features = false, features = ["openssl-vendored"] }
protobuf = "=2.8"
futures = "=0.1"
base64="*"
